# licenseplate_detector

./: .gitignore  README.md  get_data.py  gui.py  guiv1.py  main copy.py  main.py  pyproject.toml  test.ipynb
frontend/: app.js  index.html
function/: helper.py
